--- a/211506K_AS_Assignment/appsettings.json
+++ b/211506K_AS_Assignment/appsettings.json
@@ -7,6 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=MyCompany;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "MyConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=FreshFarmMarket;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "Sqlite": "Data Source=./dev.db"
+  },
+  "GoogleReCaptcha": {
+    "SiteKey": "6Lc651MkAAAAADhAnJrXYO2vsFBiWt-S6x2yWtY7",
+    "SecretKey": "6Lc651MkAAAAAIn_CUKbSiXL_TLByJTkt2BA7TPV"
   }
 }
